lec13ex2/y.output
Grammar

    0 $accept: Start $end

    1 Start: S

    2 S: L '=' R
    3  | R

    4 L: '*' R
    5  | ID

    6 R: L


Terminals, with rules where they appear

    $end (0) 0
    '*' (42) 4
    '=' (61) 2
    error (256)
    ID (258) 5


Nonterminals, with rules where they appear

    $accept (6)
        on left: 0
    Start (7)
        on left: 1
        on right: 0
    S (8)
        on left: 2 3
        on right: 1
    L (9)
        on left: 4 5
        on right: 2 6
    R (10)
        on left: 6
        on right: 2 3 4


State 0

    0 $accept: . Start $end
    1 Start: . S
    2 S: . L '=' R
    3  | . R
    4 L: . '*' R
    5  | . ID
    6 R: . L

    ID   shift, and go to state 1
    '*'  shift, and go to state 2

    Start  go to state 3
    S      go to state 4
    L      go to state 5
    R      go to state 6


State 1

    5 L: ID .

    $default  reduce using rule 5 (L)


State 2

    4 L: . '*' R
    4  | '*' . R
    5  | . ID
    6 R: . L

    ID   shift, and go to state 1
    '*'  shift, and go to state 2

    L  go to state 7
    R  go to state 8


State 3

    0 $accept: Start . $end

    $end  shift, and go to state 9


State 4

    1 Start: S .

    $default  reduce using rule 1 (Start)


State 5

    2 S: L . '=' R
    6 R: L .

    '='  shift, and go to state 10

    $default  reduce using rule 6 (R)


State 6

    3 S: R .

    $default  reduce using rule 3 (S)


State 7

    6 R: L .

    $default  reduce using rule 6 (R)


State 8

    4 L: '*' R .

    $default  reduce using rule 4 (L)


State 9

    0 $accept: Start $end .

    $default  accept


State 10

    2 S: L '=' . R
    4 L: . '*' R
    5  | . ID
    6 R: . L

    ID   shift, and go to state 1
    '*'  shift, and go to state 2

    L  go to state 7
    R  go to state 11


State 11

    2 S: L '=' R .

    $default  reduce using rule 2 (S)
